Fix T75421: Wipe clock and Iris transition not working.

Use enum items in RNA enum definition instead of hard-coded values.

Broken by 5dcb6fb22f3 Cleanup: unused enums

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D7342